data/derived/sp14/progs/unify/prog1979.ml.out
Characters 97-98:
  | h::t -> if fst h = k then snd h else assoc (d k t);;
                                                    ^
Error: This expression has type ('a * ('a -> 'b -> 'c)) list
       but an expression was expected of type 'b
       The type variable 'b occurs inside ('a * ('a -> 'b -> 'c)) list
